--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -642,8 +642,154 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > div:first-child > p:nth-child(7) {
     display: none;
 }
+/*-----------------------------------------------------------------------------------*/
+/* responsive */
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
+/*=============================================================================*/
+
+@media (max-width: 845px) {
+    /*about section*/
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > p:nth-child(2), p:nth-child(3) {
+        font-size: 14px;
+        transition: all .5s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > #column1 > p {
+        font-size: 14px;
+        transition: all .5s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > #column2 > p {
+        font-size: 14px;
+        transition: all .5s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) {
+        margin-left: 10px;
+        margin-right: 10px;
+        transition: all .5s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(5) > button:first-child {
+        width: 177px;
+        height: 34px;
+        font-size: 14px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(5) > button:first-child > div {
+        width: 29px;
+        height: 30px;
+        left: 145px;
+        top: 2px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(5) > button:first-child > div:first-child > i:first-child {
+        left: 27%;
+        top: 27%;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) {
+        margin-top: 60px;
+        transition: all .5s;
+    }
+
+    main > section:nth-child(2) > div:nth-child(2) > img:first-child {
+        width: 127px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > div:nth-child(7) > img:first-child {
+        width: 127px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > div:first-child > img:first-child {
+        width: 289px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > h2:first-child {
+        font-size: 33px;
+        line-height: 41px;
+        margin-bottom: 18px;
+        transition: all 2s;
+    }
+
+    #aboutWave {
+        width: 269px;
+        top: 537px;
+        transition: all 2s;
+    }
+
+    #aboutWave {
+        width: 269px;
+        height: 64px;
+        top: 537px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child {
+        gap: 77px;
+        transition: all .5s;
+    }
+
+    #aboutLineCircle {
+        width: 86px;
+        height: 111px;
+        bottom: 31px;
+        transition: all 2s;
+    }
+}
+
+@media (max-width: 768px) {
+    /*about section*/
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) {
+        width: 88vw;
+        transition: all 2s;
+    }
+}
+
+    @media (max-width: 608px) {
+        /*about section*/
+        main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > #column2 {
+            display: none;
+        }
+
+        main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) {
+            width: 195px;
+        }
+
+        main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > div:first-child > p:nth-child(6) {
+            display: block;
+        }
+
+        main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth-child(2) > div:nth-child(4) > div:first-child > p:nth-child(7) {
+            display: block;
+        }
+    }
+@media (max-width: 425px) {
+    /*about section*/
+    #aboutWave {
+        display: none;
+    }
+
+    main > section:nth-child(2) > section:nth-child(3) > div:first-child {
+        gap: 30px;
+    }
+
+    main > section:nth-child(2) > section:first-child > h1 {
+        font-size: 43px;
+    }
+
+    main > section:nth-child(2) > section:first-child > h4 {
+        font-size: 21px;
+    }
+}
+
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 
 
 #education {
