--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1700,162 +1700,56 @@ i.fab {
         display: none;
     }
 
+/*-----------------------------------------------------------------------------------*/
+/*=======================footer responsive =============*/
+/*----------------------------------------------------------------------------------*/
 
-    /*------------------------------------------------------------------------*/
-    /*  gallery section */
-    main > section:nth-child(5) {
-        position: relative;
-        top: 0;
-        width: 100%;
-        background: #eeeeee;;
+@media (max-width: 622px) {
+    /*footer section*/
+    footer > section:first-child > div:first-child {
+        flex-direction: column-reverse;
     }
 
-    /**
-    * title in gallery section
-    */
-    main > section:nth-child(5) > section:first-child {
-        position: relative;
-        text-align: center;
-        padding-top: 0;
-    }
-
-    main > section:nth-child(5) > section:first-child > h1 {
-        font-family: Ubuntu, sans-serif;
-        font-size: 50px;
-        text-align: center;
-        margin-top: 5px;
-        margin-bottom: 7px;
-        padding-bottom: 18px;
-    }
-
-    /**
-    * title underline in gallery section
-    */
-    main > section:nth-child(5) > section:first-child > h1::before {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 120px;
-        height: 2px;
-        background: #ddd;
-        bottom: 2px;
-        left: calc(50% - 60px);
-        border-radius: 2px;
-    }
-
-
-    /**
-    * added section positions gallery section
-    */
-    main > section:nth-child(5) > section:nth-child(2) {
-        position: relative;
+    footer > section:first-child > div:first-child > nav:nth-child(3) > ul:first-child {
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
-        margin-top: 60px;
-        padding-bottom: 7px;
+        gap: 21px;
     }
 
-    /**
-    * added section display type grid
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child {
-        width: 1100px;
-        margin-left: 70px;
-        margin-right: 70px;
-        height: 600px;
-        display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(4, 1fr);
-        gap: 9px;
+    footer > section:first-child > div:first-child > h2:nth-child(4) {
+        display: inline-block;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 40px;
+        color: #FFFFFF;
+        text-align: center;
+        margin-bottom: 6px;
     }
 
-    /**
-    * customized all divs
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div {
-        box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
-        border-radius: 15px;
+    footer > section:first-child > div:first-child > h2:nth-child(4) > span {
+        display: inline-block;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 40px;
+        color: #7ecb79;
     }
 
-    /**
-     * Customized 01 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:first-child {
-        grid-row: 1/2;
-        grid-column: 1/3;
-        background: url("../image/gallery/img_1.png") center;
-        background-size: cover;
+    footer > section:first-child > div:first-child > h2:first-child {
+        display: none;
     }
 
-    /**
-     * Customized 02 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(2) {
-        background: url("../image/gallery/img_2.jpg") center;
-        background-size: cover;
+    footer > section:first-child > div:first-child > nav:nth-child(2) {
+        margin-bottom: 20px;
     }
 
-    /**
-     * Customized 03 Image grid-column and grid-row
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(3) {
-        grid-column: 4/5;
-        grid-row: 1/4;
-        background: url("../image/gallery/img_4.jpg") center;
-        background-size: cover;
+    footer > section:first-child > div:first-child > nav:nth-child(3) {
+        margin-bottom: 5px;
+    }
+}
+@media (max-width: 425px) {
+    /*footer section*/
+    footer > section:nth-child(3) > small:first-child {
+        font-size: 10px;
+        transition: all .5s;
     }
 
-    /**
-     * Customized 04 Image
-    */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(4) {
-        background: url("../image/gallery/img_3.jpg") center;
-        background-size: cover;
-    }
-
-    /**
-     * Customized 05 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(5) {
-        background: url("../image/gallery/img_5.jpg") center;
-        background-size: cover;
-    }
-
-    /**
-     * Customized 06 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(6) {
-        background: url("../image/gallery/img_6.jpg") center;
-        background-size: cover;
-    }
-
-    /**
-     * Customized 07 Image
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(7) {
-        background: url("../image/gallery/img_7.jpeg") center;
-        background-size: cover;
-    }
-
-    /**
-     * Customized 08 Image grid-column and grid-row
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:nth-child(8) {
-        grid-column: 2/4;
-        grid-row: 3/4;
-        background: url("../image/gallery/img_8.jpg") center;
-        background-size: cover;
-    }
-
-    /**
-     * Added Hover Effects
-     */
-    main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:hover {
-        transition: all 0.5s ease;
-        -webkit-transform: scale(0.96);
-        transform: scale(0.96);
-        box-shadow: 1px 1px 15px 1px rgba(0, 0, 0, 0.68);
-        cursor: pointer;
-    }
-
+}
