--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1106,6 +1106,15 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     border-radius: 2rem;
     padding: 2.4rem 5rem;
 }
+.experience__container>div:hover{
+    opacity: 100%;
+    color: #ffffff;
+    transition-delay: 0s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    cursor: pointer;
+    background: #701C7D;
+}
 
 .experience__container>div h2 {
     color: #7ecb79;
@@ -1124,10 +1133,11 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     gap: 1rem;
     font-family: "Poppins", sans-serif;
 }
-.experience__details-icon {
+.experience__details-icon{
     color: #8a0583;
     margin-top: 6px;
 }
+
 path {
     d: path("M 10.067 0.87 a 2.89 2.89 0 0 0 -4.134 0 l -0.622 0.638 l -0.89 -0.011 a 2.89 2.89 0 0 0 -2.924 2.924 l 0.01 0.89 l -0.636 0.622 a 2.89 2.89 0 0 0 0 4.134 l 0.637 0.622 l -0.011 0.89 a 2.89 2.89 0 0 0 2.924 2.924 l 0.89 -0.01 l 0.622 0.636 a 2.89 2.89 0 0 0 4.134 0 l 0.622 -0.637 l 0.89 0.011 a 2.89 2.89 0 0 0 2.924 -2.924 l -0.01 -0.89 l 0.636 -0.622 a 2.89 2.89 0 0 0 0 -4.134 l -0.637 -0.622 l 0.011 -0.89 a 2.89 2.89 0 0 0 -2.924 -2.924 l -0.89 0.01 l -0.622 -0.636 Z m 0.287 5.984 l -3 3 a 0.5 0.5 0 0 1 -0.708 0 l -1.5 -1.5 a 0.5 0.5 0 1 1 0.708 -0.708 L 7 8.793 l 2.646 -2.647 a 0.5 0.5 0 0 1 0.708 0.708 Z");
 }
