--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -124,11 +124,12 @@ main {
 
 main > section:nth-child(1) {
     position: relative;
-    background-image: url("../image/Home Other HD Wallpapers Green Purple White Simple Background.jpg");
+    background-image: url("../image/Home\ Other\ HD\ Wallpapers\ Green\ Purple\ White\ Simple\ Background.jpg");
     opacity: 95%;
     width: 100%;
-    height: 90vh;
+   height: 90vh;
 }
+
 
 
 /**
@@ -449,12 +450,12 @@ main > section:first-child > section:first-child > div:first-child {
     }
 
     main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) {
-        margin-bottom: 44px;
+        margin-bottom: 30px;
         align-items: center;
     }
 
     main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h3:first-child {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) {
@@ -523,6 +524,28 @@ main > section:first-child > section:first-child > div:first-child {
 }
 
 @media (max-width: 375px) {
+
+    main > section:nth-child(1){
+        background-image: url("../image/laptop-half-closed-dark-with-colourful-glow-cup-coffee-glasses.jpg");
+    }
+    aside > #blog {
+        font-size: 10px;
+    }
+    #blog2{
+        font-size: small;
+    }
+    
+    #header-Nav {
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        margin-right: 52px;
+        background: none;
+        border: none;
+        transition: all .5s;
+    }
     /*home section*/
     main > section:first-child > section:first-child > div:first-child {
         flex-direction: column-reverse;
@@ -1151,10 +1174,14 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     gap: 1rem;
     font-family: "Poppins", sans-serif;
 }
-.experience__details-icon{
-    color: #8a0583;
+.experience__details-icon> ::after{
+    color: #f5f3f4;
     margin-top: 6px;
 }
+
+
+
+
 
 path {
     d: path("M 10.067 0.87 a 2.89 2.89 0 0 0 -4.134 0 l -0.622 0.638 l -0.89 -0.011 a 2.89 2.89 0 0 0 -2.924 2.924 l 0.01 0.89 l -0.636 0.622 a 2.89 2.89 0 0 0 0 4.134 l 0.637 0.622 l -0.011 0.89 a 2.89 2.89 0 0 0 2.924 2.924 l 0.89 -0.01 l 0.622 0.636 a 2.89 2.89 0 0 0 4.134 0 l 0.622 -0.637 l 0.89 0.011 a 2.89 2.89 0 0 0 2.924 -2.924 l -0.01 -0.89 l 0.636 -0.622 a 2.89 2.89 0 0 0 0 -4.134 l -0.637 -0.622 l 0.011 -0.89 a 2.89 2.89 0 0 0 -2.924 -2.924 l -0.89 0.01 l -0.622 -0.636 Z m 0.287 5.984 l -3 3 a 0.5 0.5 0 0 1 -0.708 0 l -1.5 -1.5 a 0.5 0.5 0 1 1 0.708 -0.708 L 7 8.793 l 2.646 -2.647 a 0.5 0.5 0 0 1 0.708 0.708 Z");
