--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -442,7 +442,7 @@ main > section:first-child > section:first-child > div:first-child {
 
 @media (max-width: 425px) {
     main > section:nth-child(1){
-        background-image: url("../image/top-view-desk-concept-with-copy-space.jpg");
+        background-image: url("../image/peakpx.jpg");
     }
     /*home section*/
     main > section:first-child > section:first-child > div:first-child {
