--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -15,6 +15,25 @@
     scroll-behavior: smooth;
 
 }
+.toggle-btn {
+    display: block; /* Display as block element */
+    margin-bottom: 10px; /* Adjust spacing as needed */
+    background-color: #fffcfc; /* Button background color */
+    color: #540688; /* Text color */
+    border: 2px; /* Remove default button border */
+    padding: 10px 20px; /* Add padding */
+    cursor: hand; /* Change cursor on hover */
+}
+
+/* Navbar styles */
+.menu {
+    /* Your existing navbar styles */
+    display: none; /* Initially hide the navbar */
+}
+
+.menu.active {
+    display: block; /* Show the navbar when 'active' class is present */
+}
 /* scroll bar */
 ::-webkit-scrollbar {
     display: none;
@@ -528,16 +547,44 @@ main > section:first-child > section:first-child > div:first-child {
 
 @media (max-width: 375px) {
 
-    main > section:nth-child(1){
-        background-image: url("../image/peakpx\ \(1\).jpg");
+    header {
+        position: fixed;
+        background: linear-gradient(to right, #F9FAFB, #7ecb79, #701C7D);
+        width: 100%;
+        top: 0;
+        height: 78px;
+        z-index: 999;
+        opacity: 80%;
     }
-    aside > #blog {
-        font-size: 10px;
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h3:first-child {
+        font-size: small;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    main > section:nth-child(1){
+        background: linear-gradient(to right, #F9FAFB, #7ecb79, #701C7D);
+    }
+   #blog{
+    position: relative;
+    left: 20px;
+    top: 10px;
+    text-decoration: none;
+    font-family: "ubuntu", SansSerif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 46px;
     }
     #blog2{
-        font-size: small;
+    font-family: "Comic Sans MS";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 46px;
+
+    color: rgba(12, 162, 5, 0.74);
     }
-    
+ 
     #header-Nav {
         display: inline-block;
         position: absolute;
