--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -645,15 +645,15 @@ main > section:first-child > section:first-child > div:first-child {
         transition: all .5s;
     }
     /*home section*/
-    main > section:first-child > section:first-child > div:first-child {
-        flex-direction: column-reverse;
-        margin-left: 15px;
-        margin-right: 15px;
-        padding-left: 0;
-    }
+    /* main > section:first-child > section:first-child > div:first-child { */
+        /* flex-direction: column-reverse; */
+        /* margin-left: 15px; */
+        /* margin-right: 15px; */
+        /* padding-left: 0; */
+    /* } */
 
     main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) {
-        margin-bottom: 44px;
+        margin-bottom: 30px;
         align-items: center;
     }
 
@@ -681,7 +681,7 @@ main > section:first-child > section:first-child > div:first-child {
         width: 127px;
         height: 35px;
         font-size: 15px;
-        margin-bottom: 33px;
+        margin-bottom: 23px;
     }
 
     main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) > div {
